# AdminFiles

./: LICENSE  README.md  docker-compose.yaml
backend/: .env  Cargo.toml  Dockerfile
backend/src/: auth.rs  config.rs  db.rs  errors.rs  files.rs  main.rs  models.rs  routes.rs
frontend/: Dockerfile  nginx.conf  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.css
frontend/src/assets/styles/: theme.css
frontend/src/components/: FileList.js  FileList.module.css  FileUpload.js  FileUpload.module.css
frontend/src/context/: AuthContext.js
frontend/src/pages/: Dashboard.js  Login.js  Register.js
frontend/src/utils/: api.js
