[package]
name = "admin_files_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-multipart = "0.5.0"
tokio = { version = "1.29.1", features = ["full"] }
futures = "0.3.28"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "sqlite", "chrono", "time"] }
dotenv = "0.15.0"
chrono = { version = "0.4.26", features = ["serde", "clock"] }
uuid = { version = "1.4.0", features = ["v4", "serde"] }
jsonwebtoken = "8.3.0"
bcrypt = "0.14.0"
env_logger = "0.10.0"
log = "0.4.19"
thiserror = "1.0.43"
rand = "0.8.5"
futures-util = "0.3.28"
sanitize-filename = "0.4.0"
mime = "0.3.17"
